# Team-Context-MCP-Server

./: .gitignore  .mcpignore  CLAUDE (1).md  README.md  claude_mcp_config.json  install.sh  mcp.config.json  pyproject.toml
skills/: create-endpoint.md  create-migration.md
src/team_context_mcp/: __init__.py  cli.py  config.py  db.py  embedder.py  indexer.py  sanitizer.py  server.py
team/: context.md
